--- a/css/styles.css
+++ b/css/styles.css
@@ -71,7 +71,7 @@ img {
 
 #navbar ul a {
   display: inline-block;
-  padding: 1.2rem 2rem;
+  padding: 1.2rem 1.5rem;
   text-decoration: none;
   color: #fff;
   font-size: 1.4rem;
@@ -117,7 +117,7 @@ img {
 
 #projects .projects {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(325px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
   grid-row-gap: 3rem;
   grid-column-gap: 2rem;
   margin: 2rem;
@@ -243,7 +243,16 @@ img {
 }
 
 /* SMARTPHONE */
-@media (max-width: 884px) {
+@media (max-width: 400px) {
+  #projects .projects {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(275px, 1fr));
+  }
+  #navbar {
+    padding: 0 0 10px;
+  }
+}
+/* @media (max-width: 884px) {
   #navbar {
     padding: 1rem;
     justify-content: center;
@@ -265,7 +274,7 @@ img {
   #main-footer #creator {
     margin-top: 1rem;
   }
-}
+} */
 #fcc-toggle {
   height: 0px;
   width: 0px;
